# chat_app

./: Accept:  CMakeLists.txt  config.json  readme.md
src/: main.cpp
src/database/: db_manager.cpp  db_manager.hpp  friend_dao.cpp  friend_dao.hpp  message_dao.cpp  message_dao.hpp  user_dao.cpp  user_dao.hpp
src/handlers/: auth_handler.cpp  auth_handler.hpp  friend_handler.cpp  friend_handler.hpp  message_handler.cpp  message_handler.hpp
src/models/: friendship.hpp  message.hpp  user.hpp
src/server/: http_server.cpp  http_server.hpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp  websocket_server.cpp  websocket_server.hpp
src/utils/: config.cpp  config.hpp  logger.cpp  logger.hpp
web/: home.html  login.html  profile.html
web/css/: style.css
web/js/: auth.js  home.js
